--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,8 +12,10 @@
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
       </div>
+
+      <ul class="gallery"></ul>
     </main>
 
-    <load src="./partials/footer.html" />
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
